src/main/java/com/sefford/kor/samples/core/business/errors/GetUserError.java
package com.sefford.kor.samples.core.business.errors;

/**
 * Created by sefford on 16/11/14.
 */
public class GetUserError extends InteractorError {
}
